se agrega seccion de confianza

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
 <div class="content-container">
   <app-carrousel></app-carrousel>
   <app-destacados></app-destacados>
+  <app-prefooter></app-prefooter>
   <app-footer></app-footer>
   <router-outlet />
 </div>
