Se agrega estilo a footer y prefooter

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="bg-white">
+<footer class="footer-custom">
     <div class="container-fluid">
         <div class="footer-content">
             <p>&copy; Ferremas. Todos los derechos reservados.</p>
