--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -9,12 +9,22 @@ footer {
   font-size: 0.8rem;  /* Reduce el tamaño de letra */
 }
 
+.footer-custom {
+  background-color: #ff9124;
+  color: #163854;
+  padding: 1.5rem 0;
+}
+
 .footer-content {
   display: flex;
-  align-items: center;  /* Alinea verticalmente */
-  gap: 1.5rem;  /* Espacio entre elementos */
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 1.5rem;
 }
 
 .footer-content p {
-  margin-bottom: 0;  /* Elimina el margen inferior de los párrafos */
+  margin-bottom: 0;
+  color: #163854;
+  font-weight: 500;
 }
