--- a/src/app/components/prefooter/prefooter.component.html
+++ b/src/app/components/prefooter/prefooter.component.html
@@ -1,4 +1,4 @@
-<section class="prefooter-confidence">
+<section class="prefooter-confidence mt-5">
     <div class="container">
         <div class="row text-center">
             <div class="col-12 col-md-3 mb-4 mb-md-0">
