--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -18,6 +18,6 @@
     </div>
     <div class="card-footer d-flex justify-content-between">
         <button type="button" class="btn btn-outline-primary btn-sm">Agregar al Carro</button>
-        <button type="button" class="btn btn-success btn-sm">Comprar</button>
+        <button type="button" class="btn btn-success btn-sm" data-bs-toggle="modal" data-bs-target="#modalCompra" (click)="onMostrar()">Comprar</button>
     </div>
 </div>
