Se agrega funcionalidad al carrito

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -17,7 +17,7 @@
         </div>
     </div>
     <div class="card-footer d-flex justify-content-between">
-        <button type="button" class="btn btn-outline-primary btn-sm">Agregar al Carro</button>
+        <button type="button" class="btn btn-outline-primary btn-sm " (click)="onAgregarAlCarrito()">Agregar al Carro</button>
         <button type="button" class="btn btn-success btn-sm" data-bs-toggle="modal" data-bs-target="#modalCompra" (click)="onMostrar()">Comprar</button>
     </div>
 </div>
