--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -25,6 +25,23 @@
                     </div>
                 </li>
             </ul>
+            <div class="dropdown me-3">
+                <button class="btn btn-outline-light dropdown-toggle border-0" type="button" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                    <i class="fas fa-money-bill-wave me-1"></i>
+                    {{ selectedDivisa }}
+                </button>
+                <ul class="dropdown-menu">
+                    <li *ngFor="let currency of availableDivisas">
+                        <a class="dropdown-item" (click)="onDivisaChange(currency.code)"
+                            [class.active]="currency.code === selectedDivisa">
+                            <i class="fas fa-check me-2"
+                                [style.visibility]="currency.code === selectedDivisa ? 'visible' : 'hidden'"></i>
+                            {{ currency.code }} - {{ currency.name }}
+                        </a>
+                    </li>
+                </ul>
+            </div>
             <button class="btn btn-outline-light position-relative border-0 me-3" type="button" data-bs-toggle="modal"
                 data-bs-target="#modalCarrito">
                 <i class="fas fa-shopping-cart fa-xl"></i>
