--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -12,7 +12,7 @@
         <!-- Descripción con altura fija de 80px -->
         <p class="card-text" style="height: 70px; overflow: hidden;">{{ producto.descripcion }}</p>
         <div class="d-flex justify-content-between align-items-center mt-auto">
-            <strong class="text-primary">{{ producto.precio | conversor}}</strong>
+            <strong class="text-primary">{{ getPrecioActual() | conversor}}</strong>
             <span *ngIf="producto.descuento" class="badge bg-danger">-{{ producto.descuento }}%</span>
         </div>
     </div>
