--- a/src/app/components/modal-carrito/modal-carrito.component.html
+++ b/src/app/components/modal-carrito/modal-carrito.component.html
@@ -29,7 +29,7 @@
             <div class="col-md-4">
               <h6 class="mb-1">{{ item.producto.nombre }}</h6>
               <p class="text-muted small mb-1">{{ item.producto.descripcion }}</p>
-              <span class="text-success fw-bold">{{ item.producto.precio | conversor }}</span>
+              <span class="text-success fw-bold">{{ getPrecioActual(item.producto) | conversor }}</span>
             </div>
             <div class="col-md-3">
               <label class="form-label small">Cantidad</label>
