--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,7 +1,14 @@
 <div class="card mb-3 h-100 d-flex flex-column" *ngIf="!producto.oculto">
     <h6 class="card-header">{{ producto.nombre }}</h6>
-    <img *ngIf="producto.imagen" [src]="'notfound.png'" class="d-block user-select-none" width="100%" height="200"
-        [alt]="producto.nombre" style="object-fit: cover;">
+    <div class="image-container">
+        <img 
+          [src]="producto.imagen || 'assets/images/placeholder-producto.jpg'"
+          [alt]="producto.nombre"
+          class="card-img-top product-image"
+          width="100%" 
+          height="200"
+          style="object-fit: contain;">
+    </div>
     <svg *ngIf="!producto.imagen" xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200"
         aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice"
         viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
